--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div class="row align-items-center">
                     <div class="col justify-content-center text-center">
-                        <img src="img/Motivation.png" style="width:60%; margin-right:-10px; margin-top:-10px;">
+                        <img src="img/Motivation.png" style="width:100%; margin-right:-10px; margin-top:-10px;">
                     </div>
                     <hr>
                     <p>
@@ -114,7 +114,7 @@
                     </div>
                     <hr>
                     <p>
-                        Qualitative comparison on our 4DGCPro and HiFi4G datasets against ReRF, HPC, 3DGStream and V3. </p>
+                        Qualitative comparison on our 4DGCPro and HiFi4G datasets against ReRF, HPC, 3DGStream and VideoGS. </p>
                 </div>
             </div>
 
