--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="nerf_equal_v2">  <sup>&dagger;</sup> corresponding author</div>
         </br>
         <div class="btn-group" role="group" aria-label="Top menu">
-            <a class="btn btn-primary" href="https://arxiv.org/pdf/2503.18421v1">Paper</a>
+            <a class="btn btn-primary" href="https://arxiv.org/abs/2509.17513">Arxiv</a>
         </div>
     </div>
 
@@ -109,12 +109,12 @@
                 <h2>Comparison</h2>
                 <hr>
                 <div class="row align-items-center">
-                    <div class="col justify-content-center text-center">
-                        <img src="img/Qualitative.png" style="width:100%; margin-right:-10px; margin-top:-10px;">
+                    <div class="col text-center"> 
+                        <img src="img/Qualitative.png" class="img-fluid mb-3" alt="Dataset Gallery">
+                        <p>
+                            Qualitative comparison on our 4DGCPro and HiFi4G datasets against ReRF, HPC, 3DGStream and VideoGS.
+                        </p>
                     </div>
-                    <hr>
-                    <p>
-                        Qualitative comparison on our 4DGCPro and HiFi4G datasets against ReRF, HPC, 3DGStream and VideoGS. </p>
                 </div>
             </div>
 
@@ -122,27 +122,26 @@
                 <h2>Dataset Gallery</h2>
                 <hr>
                 <div class="row align-items-center">
-                    <div class="col justify-content-center text-center">
-                        <img src="img/gallery.png" style="width:100%; margin-right:-10px; margin-top:-10px;">
+                    <div class="col text-center"> 
+                        <img src="img/gallery.png" class="img-fluid mb-3" alt="Dataset Gallery">
+                        <p>
+                            Gallery of our results. 4DGCPro delivers real-time high-fidelity rendering of scenes across
+                            challenging motions, such as “playing instruments”, “dancing” and “playing sports”.
+                        </p>
                     </div>
-                    <hr>
-                    <p>
-                        Gallery of our results. 4DGCPro delivers real-time high-fidelity rendering of scenes across
-                        challenging motions, such as “playing instruments”, “dancing” and “playing sports”. </p>
                 </div>
             </div>
-
 
             <div class="section">
                 <h2>Multi-bitrate Results</h2>
                 <hr>
                 <div class="row align-items-center">
-                    <div class="col justify-content-center text-center">
-                        <img src="img/hierarchical.png" style="width:100%; margin-right:-10px; margin-top:-10px;">
+                    <div class="col text-center"> 
+                        <img src="img/hierarchical.png" class="img-fluid mb-3" alt="Dataset Gallery">
+                        <p>
+                            Multi-bitrate results of our method under a single bitstream.
+                        </p>
                     </div>
-                    <hr>
-                    <p>
-                        Multi-bitrate results of our method under a single bitstream. </p>
                 </div>
             </div>
 
