--- a/index.html
+++ b/index.html
@@ -38,20 +38,21 @@
         <hr>
         <p class="authors">
             <a href="https://zihanzheng-sjtu.github.io/"> Zihan Zheng</a>,
-            <a> Zhenlong Wu </a>
+            <a> Zhenlong Wu </a>,
             <a href="https://waveviewer.github.io/"> Houqiang Zhong</a>,
-            <a> Yuan Tian </a>,
+            <a> Yuan Tian</a>,
             <a> Ning Cao</a>,
             <a> Lan Xu</a>,
             <a> Jiangchao Yao</a>,
             <a> Xiaoyun Zhang</a>,
             <a href="https://qianghu-huber.github.io/qianghuhomepage/"> Qiang Hu</a><sup>&dagger;</sup>,
-            <a> Wenjun Zhang</a><sup>&dagger;</sup>
+            <a> Wenjun Zhang</a>
         </p>
         <div class="nerf_equal_v2">  <sup>&dagger;</sup> corresponding author</div>
         </br>
         <div class="btn-group" role="group" aria-label="Top menu">
             <a class="btn btn-primary" href="https://arxiv.org/abs/2509.17513">Arxiv</a>
+            <a class="btn btn-primary" href="https://github.com/MediaX-SJTU/4DGCPro">Code</a>
         </div>
     </div>
 
